# pygandi

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: build.yml  ci.yml  docker.yml
src/pygandi/: cli.py  gandi.py  helpers.py
tests/: .pylintrc  test_cli.py  test_gandi.py
